--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <span>[24] Y. Sun et al., "Principal Component Analysis-Based Broadband Hybrid Precoding for
                             Millimeter-Wave Massive MIMO Systems," <i>IEEE Transactions on Wireless Communications</i>,
                             vol. 19, no. 10, pp. 6331-6346, Oct. 2020.
-                            (<b>SCI Q2, IF=5.379</b>)
+                            (<b>SCI Q1 Top, IF=6.779</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9123541" target="_blank">URL</a>]
                         </span>
                     </p>
