--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./Files/jemdoc.css" type="text/css" />
     <script src="jquery.min.js"></script>
     <link rel="shortcut icon" href="./Files/favicon.jpg">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>Zhen Gao</title>
 </head>
 
@@ -58,6 +59,7 @@
             </table>
 
             <A NAME="Latest">
+                <i class="fa fa-newspaper-o"></i>
                 <h2>Latest News</h2>
             </A>
             <ul>
