--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
             </table>
 
             <A NAME="Latest">
-                <i class="fa fa-newspaper-o"></i>
-                <h2>Latest News</h2>
+                <i class="fa fa-newspaper-o fa-3x"><h2>Latest News</h2></i>
             </A>
             <ul>
                 <li> <b>
