--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             </table>
 
             <A NAME="Latest">
-                <i class="fa fa-newspaper-o fa-2x"><h2>Latest News</h2></i>
+                <i class="fa fa-newspaper-o fa-2x"></i>
+                <h2>Latest News</h2>
             </A>
             <ul>
                 <li> <b>
