--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
             </table>
 
             <A NAME="Latest">
-                <i class="fa fa-newspaper-o fa-2x"></i>
-                <h2>Latest News</h2>
+                <h2><i class="fa fa-newspaper-o"></i>Latest News</h2>
             </A>
             <ul>
                 <li> <b>
