--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
 
 
                 <A NAME="Patents">
-                    <h2>Patents</h2>
+                    <h2><i class="fa fa-file-archive-o" aria-hidden="true"></i>&nbsp;Patents</h2>
                 </A>
                 <font size="3">
                     <ul>
@@ -754,7 +754,7 @@
 
 
                 <A NAME="Services">
-                    <h2>Services</h2>
+                    <h2><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;Services</h2>
                 </A>
 
                 <p><b>Membership</b>: </p>
@@ -793,7 +793,7 @@
 
 
                 <A NAME="Awards">
-                    <h2>Awards</h2>
+                    <h2><i class="fa fa-gift" aria-hidden="true"></i>&nbsp;Awards</h2>
                 </A>
                 <font size="3">
                     <ul>
