--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <td align="left">
                         <p>
                             <a href="./">
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;
+                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;&nbsp;
                                 <font size="4">Dr. Zhen Gao (</font>
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font>
@@ -90,7 +90,7 @@
             <br />
 
             <A NAME="Interest">
-                <h2><i class="fa fa-search" aria-hidden="true"></i>&nbsp;Research Interest</h2>
+                <h2><i class="fa fa-search" aria-hidden="true"></i>&nbsp;&nbsp;Research Interest</h2>
             </A>
             Zhen Gao (Member, IEEE) received the B.S. degree in information engineering from the Beijing Institute of Technology, Beijing, China, in July 2011, and the Ph.D. degree in communication and signal processing from the Tsinghua National Laboratory for Information
             Science and Technology, Department of Electronic Engineering, Tsinghua University, China, in July 2016.,From 2014 to 2015, he visited the Communications and Signal Processing Group, Imperial College London, U.K., for nearly one year. He is
@@ -185,7 +185,7 @@
 
 
             <A NAME="Publications">
-                <h2><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Publications</h2>
+                <h2><i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;Publications</h2>
             </A>
 
             <p><b>Book Chapters</b>: </p>
@@ -739,7 +739,7 @@
 
 
                 <A NAME="Patents">
-                    <h2><i class="fa fa-file-archive-o" aria-hidden="true"></i>&nbsp;Patents</h2>
+                    <h2><i class="fa fa-file-archive-o" aria-hidden="true"></i>&nbsp;&nbsp;Patents</h2>
                 </A>
                 <font size="3">
                     <ul>
@@ -754,7 +754,7 @@
 
 
                 <A NAME="Services">
-                    <h2><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;Services</h2>
+                    <h2><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;&nbsp;Services</h2>
                 </A>
 
                 <p><b>Membership</b>: </p>
@@ -793,7 +793,7 @@
 
 
                 <A NAME="Awards">
-                    <h2><i class="fa fa-gift" aria-hidden="true"></i>&nbsp;Awards</h2>
+                    <h2><i class="fa fa-gift" aria-hidden="true"></i>&nbsp;&nbsp;Awards</h2>
                 </A>
                 <font size="3">
                     <ul>
