--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </table>
 
             <A NAME="Latest">
-                <h2><i class="fa fa-newspaper-o"></i>&nbsp;Latest News</h2>
+                <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul>
                 <li> <b>
