--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
                             arXiv:2009.10963 (2020).
                             (<i>Pre-Print</i>)
                             [<a href="https://arxiv.org/abs/2009.10963" target="_blank">URL</a>]
+                            [<a href="https://www.bilibili.com/video/BV1qb4y1D7ht/" target="_blank">Video</a>]
                         </span>
                     </p>
 
