--- a/index.html
+++ b/index.html
@@ -239,8 +239,11 @@
                             [<a href="https://www.bilibili.com/video/BV1qb4y1D7ht/" target="_blank">Video</a>]
                         </span>
                     </p>
+                    <div align="center">
+                        <iframe src="//player.bilibili.com/player.html?aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                    </div>
 
-                    <iframe src="//player.bilibili.com/player.html?aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                    
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[28] Y. Mei, <b>Z. Gao</b>, Y. Wu, W. Chen, D. W. K. Ng, M. Di Renzo, "Compressive Sensing
