--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
                             [<a href="https://www.bilibili.com/video/BV1qb4y1D7ht/" target="_blank">Video</a>]
                         </span>
                     </p>
-                    <div align="center">
-                        <iframe src="//player.bilibili.com/player.html?aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                    <div style="position: relative; padding: 30% 45%;">
+                        <iframe src="//player.bilibili.com/player.html?aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;"></iframe>
                     </div>
 
                     
