--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         </span>
                     </p>
                     <div style="position: relative; padding: 30% 45%;">
-                        <iframe src="//player.bilibili.com/player.html?aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;"></iframe>
+                        <iframe src="//player.bilibili.com/player.html?aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1&as_wide=1&high_quality=1&danmaku=" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: relative; width: 85%; height: 85%;"></iframe>
                     </div>
 
                     
