--- a/index.html
+++ b/index.html
@@ -240,10 +240,26 @@
                         </span>
                         
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" 
+                                   href="#collapseOne">
+                                    Click here to unfold/fold
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseOne" class="panel-collapse collapse in">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe src="//player.bilibili.com/player.html??aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1&as_wide=1&high_quality=1&danmaku=" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 90%; height: 90%; left: 10px; top: 10px;"> </iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <!--
                     <div style="position: relative; padding: 30% 45%;">
                         <iframe src="//player.bilibili.com/player.html??aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1&as_wide=1&high_quality=1&danmaku=" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 90%; height: 90%; left: 10px; top: 10px;"> </iframe>
                     </div>
-
+                    -->
                     
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
