--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./Files/jemdoc.css" type="text/css" />
     <script src="jquery.min.js"></script>
     <link rel="shortcut icon" href="./Files/favicon.jpg">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <title>Zhen Gao</title>
 </head>
