--- a/index.html
+++ b/index.html
@@ -73,21 +73,24 @@
                     </b> Paper of Anwen Liao was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
                     <a href="" target="_blank">
                         <font style="font-family:Microsoft YaHei">廖安文 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
-                    </a>)</li>
+                    </a>)
+                </li>
 
                 <li> <b>
                         <font color="#FF0000">[2021.02]</font>
                     </b> Paper of Ziwei Wan was accepted by <b>IEEE Transactions of Communications</b>(
                     <a href="https://arxiv.org/abs/2009.10963" target="_blank">
                         <font style="font-family:Microsoft YaHei">万子维 论文被TCOM(<b>IF=5.646</b>)期刊录用</font>
-                    </a>)</li>
+                    </a>)
+                </li>
 
                 <li> <b>
                         <font color="#FF0000">[2020.12]</font>
                     </b> Minghui Wu was awarded <b>Second Prize</b> of National Competition of AI (
                     <a href="https://mp.weixin.qq.com/s/yqaVs5dDe5mQwGoZwIeENA" target="_blank">
                         <font style="font-family:Microsoft YaHei">吴铭晖 获得全国人工智能大赛二等奖</font>
-                    </a>)</li>
+                    </a>)
+                </li>
 
 
             </ul>
@@ -235,6 +238,15 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[30] A. Liao et al., "Terahertz Ultra-Massive MIMO-Based Aeronautical Communications in
+                            Space-Air-Ground Integrated Networks," in IEEE Journal on Selected Areas in Communications.
+                            (<i>Early</i>)
+                            [<a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">URL</a>]
+                        </span>
+
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[29] Z. Wan, <b>Z. Gao</b>, F. Gao, M. D. Renzo, M.-S. Alouini, "Terahertz Massive MIMO
                             with Holographic Reconfigurable Intelligent Surfaces," arXiv preprint
                             arXiv:2009.10963 (2020).
@@ -248,13 +260,15 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to unfold/fold video.</i>
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseOne" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
-                                <iframe src="//player.bilibili.com/player.html??aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1&as_wide=1&high_quality=1&danmaku=" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;"> </iframe>
+                                <iframe src="//player.bilibili.com/player.html??aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1&as_wide=1&high_quality=1&danmaku=" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
                             </div>
                         </div>
                     </div>
