--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[30] A. Liao et al., "Terahertz Ultra-Massive MIMO-Based Aeronautical Communications in
                             Space-Air-Ground Integrated Networks," in IEEE Journal on Selected Areas in Communications.
-                            (<i>Early</i>)
+                            (<i>Early Access</i>, <b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">URL</a>]
                         </span>
 
