--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[30] A. Liao et al., "Terahertz Ultra-Massive MIMO-Based Aeronautical Communications in
+                        <span>[30] A. Liao; <b>Z. Gao</b>; D. Wang; H. Wang; H. Yin; D. W. K. Ng; M.-S. Alouini, "Terahertz Ultra-Massive MIMO-Based Aeronautical Communications in
                             Space-Air-Ground Integrated Networks," in IEEE Journal on Selected Areas in Communications.
                             (<i>Early Access</i>, <b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">URL</a>]
@@ -319,7 +319,7 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[24] Y. Sun et al., "Principal Component Analysis-Based Broadband Hybrid Precoding for
+                        <span>[24] Y. Sun, <b>Z. Gao</b>, H. Wang, B. Shim, G. Gui, G. Mao, F. Adachi, "Principal Component Analysis-Based Broadband Hybrid Precoding for
                             Millimeter-Wave Massive MIMO Systems," <i>IEEE Transactions on Wireless Communications</i>,
                             vol. 19, no. 10, pp. 6331-6346, Oct. 2020.
                             (<b>SCI Q1 Top, IF=6.779</b>)
