--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[30] A. Liao; <b>Z. Gao</b>; D. Wang; H. Wang; H. Yin; D. W. K. Ng; M.-S. Alouini, "Terahertz Ultra-Massive MIMO-Based Aeronautical Communications in
+                        <span>[30] A. Liao, <b>Z. Gao</b>, D. Wang, H. Wang, H. Yin, D. W. K. Ng, M.-S. Alouini, "Terahertz Ultra-Massive MIMO-Based Aeronautical Communications in
                             Space-Air-Ground Integrated Networks," in IEEE Journal on Selected Areas in Communications.
                             (<i>Early Access</i>, <b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">URL</a>]
