--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                             5, pp. 5677-5682, May 2020.
                             (<b>SCI Q2, IF=5.379</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9037126" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/Source-Code-X.Ma" target="_blank">Code</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-X.Ma/TVT" target="_blank">Code</a>]
                         </span>
                     </p>
 
