--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <span>[30] A. Liao, <b>Z. Gao</b>, D. Wang, H. Wang, H. Yin, D. W. K. Ng, M.-S. Alouini,
                             "Terahertz Ultra-Massive MIMO-Based Aeronautical Communications in
                             Space-Air-Ground Integrated Networks," in IEEE Journal on Selected Areas in Communications.
-                            (<i>Early Access</i>, <b>SCI Q1 Top, IF=11.42</b>)
+                            (<b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">URL</a>]
                         </span>
 
