--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <li> <b>
                         <font color="#FF0000">[2021.04]</font>
                     </b> Paper of Xisuo Ma was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
-                    <a href="https://arxiv.org/abs/2104.11052" target="_blank">
+                    <a href="https://ieeexplore.ieee.org/document/9452036" target="_blank">
                         <font style="font-family:Microsoft YaHei">马西锁 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
                     </a>)【模型驱动深度学习的MIMO传输】
                 </li>
@@ -279,8 +279,8 @@
                         <span>[31] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel
                             Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE Journal on
                             Selected Areas in Communications.
-                            (<i>arXiv</i>, <b>SCI Q1 Top, IF=11.42</b>)
-                            [<a href="https://arxiv.org/abs/2104.11052" target="_blank">URL</a>]
+                            (<i>Early Access</i>, <b>SCI Q1 Top, IF=11.42</b>)
+                            [<a href="https://ieeexplore.ieee.org/document/9452036" target="_blank">URL</a>]
                         </span>
 
                     </p>
