--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
             </A>
             <ul>
                 <li> <b>
+                    <font color="#FF0000">[2021.04]</font>
+                </b> Paper of Shicong Liu was accepted by <b>IEEE Communications Magazine</b>(
+                <a href="" target="_blank">
+                    <font style="font-family:Microsoft YaHei">刘仕聪 论文被COMMAG(<b>IF=11.052</b>)期刊录用</font>
+                </a>)【LEO卫星与B5G垂直应用】
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2021.04]</font>
                     </b> Paper of Xisuo Ma was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
                     <a href="https://ieeexplore.ieee.org/document/9452036" target="_blank">
