--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
             </A>
             <ul>
                 <li> <b>
-                    <font color="#FF0000">[2021.05]</font>
-                </b> Paper of Shicong Liu was accepted by <b>IEEE Communications Magazine</b>(
-                <a href="" target="_blank">
-                    <font style="font-family:Microsoft YaHei">刘仕聪 论文被COMMAG(<b>IF=11.052</b>)期刊录用</font>
-                </a>)【LEO卫星与B5G垂直应用】
+                        <font color="#FF0000">[2021.05]</font>
+                    </b> Paper of Shicong Liu was accepted by <b>IEEE Communications Magazine</b>(
+                    <a href="" target="_blank">
+                        <font style="font-family:Microsoft YaHei">刘仕聪 论文被COMMAG(<b>IF=11.052</b>)期刊录用</font>
+                    </a>)【LEO卫星与B5G垂直应用】
                 </li>
 
                 <li> <b>
@@ -283,6 +283,16 @@
             <p><b>Journals</b>: </p>
             <font size="3">
                 <ul>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[32] L. Qiao, J. Zhang, Z. Gao, D. W. K. Ng, M. D. Renzo, M.-S Alouini, "Massive Access in Media Modulation Based Massive
+                            Machine-Type Communications," in IEEE Transactions on Wireless Communications.
+                            (<i>Pre-Print</i>)
+                            [<a href="https://arxiv.org/abs/2104.03874" target="_blank">URL</a>]
+                        </span>
+
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[31] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel
                             Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE Journal on
@@ -395,7 +405,8 @@
                             5, pp. 5677-5682, May 2020.
                             (<b>SCI Q2, IF=5.379</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9037126" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/Source-Code-X.Ma/tree/main/TVT" target="_blank">Code</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-X.Ma/tree/main/TVT"
+                                target="_blank">Code</a>]
                         </span>
                     </p>
 
