--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul>
+
+                <li> <b>
+                    <font color="#FF0000">[2021.06]</font>
+                </b> Paper of Malong Ke was accepted by <b>IEEE Wireless Communications Magazine</b>(
+                <a href="" target="_blank">
+                    <font style="font-family:Microsoft YaHei">柯玛龙 论文被WCM(<b>IF=11.391</b>)期刊录用</font>
+                </a>)
+                </li>
+
                 <li> <b>
                         <font color="#FF0000">[2021.05]</font>
                     </b> Paper of Shicong Liu was accepted by <b>IEEE Communications Magazine</b>(
