--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapseOne" class="panel-collapse collapse">
+                        <div id="collapseTwo" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
                                     src="//player.bilibili.com/player.html??aid=418798680&bvid=BV1RV411s7Ki&cid=360880871&page=1&as_wide=1&high_quality=1&danmaku="
