--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <ul>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[32] L. Qiao, J. Zhang, Z. Gao, D. W. K. Ng, M. D. Renzo, M.-S Alouini, "Massive Access in Media Modulation Based Massive
+                        <span>[32] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. W. K. Ng, M. D. Renzo, M.-S Alouini, "Massive Access in Media Modulation Based Massive
                             Machine-Type Communications," in IEEE Transactions on Wireless Communications.
                             (<i>Pre-Print</i>)
                             [<a href="https://arxiv.org/abs/2104.03874" target="_blank">URL</a>]
@@ -303,7 +303,7 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[31] X. Ma, Z. Gao, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel
+                        <span>[31] X. Ma, <b>Z. Gao</b>, F. Gao, M. D. Renzo, "Model-Driven Deep Learning Based Channel
                             Estimation and Feedback for Millimeter-Wave Massive Hybrid MIMO Systems," in IEEE Journal on
                             Selected Areas in Communications.
                             (<i>Early Access</i>, <b>SCI Q1 Top, IF=11.42</b>)
