--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
                                     <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
                                         unfold/fold video.</i>
                                 </a>
