--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                 <h2><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;Latest News</h2>
             </A>
             <ul>
+                <li> <b>
+                    <font color="#FF0000">[2021.07]</font>
+                </b> Paper of Li Qiao was accepted by <b>IEEE Transactions on Wireless Communications</b>(
+                <a href="" target="_blank">
+                    <font style="font-family:Microsoft YaHei">乔力 论文被TWC(<b>IF=7.016</b>)期刊录用</font>
+                </a>)
+                </li>
 
                 <li> <b>
                     <font color="#FF0000">[2021.06]</font>
