--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <li> <b>
                     <font color="#FF0000">[2021.07]</font>
                 </b> Paper of Li Qiao was accepted by <b>IEEE Transactions on Wireless Communications</b>(
-                <a href="" target="_blank">
+                <a href="https://arxiv.org/abs/2104.03874" target="_blank">
                     <font style="font-family:Microsoft YaHei">乔力 论文被TWC(<b>IF=7.016</b>)期刊录用</font>
                 </a>)
                 </li>
