--- a/index.html
+++ b/index.html
@@ -946,6 +946,14 @@
                 </A>
                 <font size="3">
                     <ul>
+                        <li>2021, X. Ma, Outstanding Graduates of Beijing & BIT |
+                            <font style="font-family:Microsoft YaHei">马西锁 北京市、北京理工大学优秀毕业生</font>
+                        </li>
+
+                        <li>2021, X. Ma, Outstanding Member of Communist Youth League |
+                            <font style="font-family:Microsoft YaHei">马西锁 优秀团员</font>
+                        </li>
+
                         <li>2020, M. Wu, Second Prize of National Competition of AI |
                             <font style="font-family:Microsoft YaHei">吴铭晖 全国人工智能大赛二等奖</font>
                         </li>
