--- a/index.html
+++ b/index.html
@@ -73,10 +73,18 @@
             <ul>
                 <li> <b>
                     <font color="#FF0000">[2021.07]</font>
+                </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of Wireless Big Data Competition (
+                <a href="https://mp.weixin.qq.com/s/yqaVs5dDe5mQwGoZwIeENA" target="_blank">
+                    <font style="font-family:Microsoft YaHei">王洋 吴铭晖 获得第二届无线大数据竞赛-无线网络信道重构二等奖、三等奖</font>
+                </a>)
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2021.07]</font>
                 </b> Paper of Li Qiao was accepted by <b>IEEE Transactions on Wireless Communications</b>(
                 <a href="https://arxiv.org/abs/2104.03874" target="_blank">
                     <font style="font-family:Microsoft YaHei">乔力 论文被TWC(<b>IF=7.016</b>)期刊录用</font>
-                </a>)
+                </a>)【物联网海量机器类通信】
                 </li>
 
                 <li> <b>
@@ -84,7 +92,7 @@
                 </b> Paper of Malong Ke was accepted by <b>IEEE Wireless Communications Magazine</b>(
                 <a href="" target="_blank">
                     <font style="font-family:Microsoft YaHei">柯玛龙 论文被WCM(<b>IF=11.391</b>)期刊录用</font>
-                </a>)
+                </a>)【空基海量物联网接入】
                 </li>
 
                 <li> <b>
