--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <li> <b>
                     <font color="#FF0000">[2021.07]</font>
                 </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of Wireless Big Data Competition (
-                <a href="https://mp.weixin.qq.com/s/yqaVs5dDe5mQwGoZwIeENA" target="_blank">
-                    <font style="font-family:Microsoft YaHei">王洋 吴铭晖 获得第二届无线大数据竞赛-无线网络信道重构二等奖、三等奖</font>
+                <a href=" " target="_blank">
+                    <font style="font-family:Microsoft YaHei">王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
                 </a>)
                 </li>
 
