--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
             <ul>
                 <li> <b>
                     <font color="#FF0000">[2021.07]</font>
+                </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
+                <a href=" " target="_blank">
+                    <font style="font-family:Microsoft YaHei">高镇入选重要期刊IEEE Communications Letters编委</font>
+                </a>)
+                </li>
+                <li> <b>
+                    <font color="#FF0000">[2021.07]</font>
                 </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of Wireless Big Data Competition (
                 <a href=" " target="_blank">
                     <font style="font-family:Microsoft YaHei">王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
@@ -927,6 +934,7 @@
                 <p><b>Associated Editor</b>: </p>
                 <font size="3">
                     <ul>
+                        <li>IEEE Communications Letters</li>
                         <li>IEEE Access</li>
                         <li>Frontiers in Communications and Networks</li>
                     </ul>
