--- a/index.html
+++ b/index.html
@@ -468,6 +468,8 @@
                                 Access</i>, vol. 8, pp. 19530-19539, 2020.
                             (<b>SCI Q2, IF=3.745</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8964330" target="_blank">URL</a>]
+                            [<a href="https://github.com/cokechen/GmdHbf_Access"
+                                target="_blank">Code</a>]
                         </span>
                     </p>
 
